package Comportamiento.Strategy;

public interface IEstrategiaPago {
    //La estrategia(interfaz)
    String procesadorPago(double monto);
}
